/***********************************************************************
X3 ChangeLog

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to failpw_func_t and
	reg_failpw_func.

	* src/mod-helpserv.c: add extra NULL argument/parameter to reflect change
	in nickserv.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to topic_func_t and
	reg_topic_func.

	* src/chanserv.c src/mod-python.c: add extra NULL argument/parameter to
	reflect change in hash.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto.h src/proto-common.c: add extra parameter to chanmsg_func_t
	and reg_chanmsg_func.

	* src/chanserv.c src/modcmd.c: add extra NULL argument/parameter to
	reflect change in proto.

2009-10-31  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to
	handle_rename_func_t and reg_handle_rename func.

	* src/chanserv.c src/mod-helpserv.c src/mod-memoserv.c: add extra NULL
	argument/parameter to reflect change in nickserv.

2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>

	* src/mod-snoop.c src/mod-helpserv.c src/mod-sockcheck.c src/mod-track.c:
	fix missed NULL argument/parameter additions from earlier commits.

2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to join_func_t and
	reg_join_func.

	* src/chanserv.c src/opserv.c src/mod-python.c src/spamserv.c: add extra
	NULL argument/parameter to reflect change in hash.

2009-10-30  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to nick_change_func_t and
	reg_nick_change_func. Also fix memory leaks from not freeing extras lists
	for some callback routines.

	* src/chanserv.c src/opserv.c src/mod-python.c src/spamserv.c
	src/nickserv.c src/modcmd.c: add extra NULL argument/parameter to reflect
	change in hash.

	* src/proto-p10.c: fix logic for calling call_new_user_funcs.
